...
enum AppCategory {
  closet,
  composition,
  styleLog;

  String get label => switch (this) {
        AppCategory.closet => '옷장',
        AppCategory.composition => '코디',
        AppCategory.styleLog => '스타일일지',
      };
}

// TODO: 향후 이 폐쇄형 어휘를 JSON 리소스로 외부화할 예정
/// [ClothingItem.season], [Composition.season]에 허용되는 값.
enum Season {
...
